--- a/MediaBrowser.WebDashboard/dashboard-ui/reports.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/reports.html
@@ -59,7 +59,7 @@
 
                         <div id="selectPageSizeBox" style="display: none;">
                             <label for="selectPageSize">${LabelPageSize}</label>
-                            <select id="selectPageSize">
+                            <select id="selectPageSize" class="selectPageSize">
                                 <option value="20">20</option>
                                 <option value="50">50</option>
                                 <option value="100">100</option>
