--- a/MediaBrowser.WebDashboard/dashboard-ui/tvgenres.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvgenres.html
@@ -44,7 +44,7 @@
                     <br />
                     <div>
                         <label for="selectPageSize">${LabelPageSize}</label>
-                        <select id="selectPageSize"></select>
+                        <select id="selectPageSize" class="selectPageSize"></select>
                     </div>
 
                 </div>
