--- a/MediaBrowser.WebDashboard/dashboard-ui/gamegenres.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/gamegenres.html
@@ -32,7 +32,7 @@
 
                     <div>
                         <label for="selectPageSize">${LabelPageSize}</label>
-                        <select id="selectPageSize"></select>
+                        <select id="selectPageSize" class="selectPageSize"></select>
                     </div>
 
                 </div>
