--- a/MediaBrowser.WebDashboard/dashboard-ui/musicvideos.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicvideos.html
@@ -39,7 +39,7 @@
 
                     <div>
                         <label for="selectPageSize">${LabelPageSize}</label>
-                        <select id="selectPageSize"></select>
+                        <select id="selectPageSize" class="selectPageSize"></select>
                     </div>
 
                 </div>
