--- a/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
@@ -50,7 +50,7 @@
                     <br />
                     <div>
                         <label for="selectPageSize">${LabelPageSize}</label>
-                        <select id="selectPageSize"></select>
+                        <select id="selectPageSize" class="selectPageSize"></select>
                     </div>
 
                 </div>
