--- a/MediaBrowser.WebDashboard/dashboard-ui/tvstudios.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvstudios.html
@@ -35,7 +35,7 @@
 
                     <div>
                         <label for="selectPageSize">${LabelPageSize}</label>
-                        <select id="selectPageSize"></select>
+                        <select id="selectPageSize" class="selectPageSize"></select>
                     </div>
 
                 </div>
