--- a/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
@@ -12,7 +12,7 @@
 
                 <div style="margin:1em 0 .5em;padding-left:5px;">
                     <h1 style="display:inline-block;vertical-align:middle;margin: 0;">${HeaderSelectServer}</h1>
-                    <a href="https://github.com/MediaBrowser/Wiki/wiki/Emby%20Connect" target="_blank" class="clearLink" style="margin-top:0;display:inline-block;vertical-align:middle;margin-left:1em;"><paper-button raised class="secondary mini"><i class="fa fa-info-circle"></i>${ButtonHelp}</paper-button></a>
+                    <a href="https://github.com/MediaBrowser/Wiki/wiki/Emby%20Connect" target="_blank" class="clearLink" style="margin-top:0;display:inline-block;vertical-align:middle;margin-left:1em;"><paper-button raised class="secondary mini"><iron-icon icon="info"></iron-icon><span>${ButtonHelp}</span></paper-button></a>
                 </div>
 
                 <div class="serverList"></div>
