--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
@@ -15,7 +15,7 @@
                         <h1 style="float:left;">
                             <img src="css/images/mblogoicon.png" style="vertical-align:middle;height:30px;margin-right:5px;" />${WelcomeToProject}
                         </h1>
-                        <a href="https://github.com/MediaBrowser/Wiki/wiki/Quick%20start" target="_blank" class="clearLink" style="float:right;margin-top:20px;"><paper-button raised class="secondary mini"><i class="fa fa-info-circle"></i>${ButtonQuickStartGuide}</paper-button></a>
+                        <a href="https://github.com/MediaBrowser/Wiki/wiki/Quick%20start" target="_blank" class="clearLink" style="float:right;margin-top:20px;"><paper-button raised class="secondary mini"><iron-icon icon="info"></iron-icon><span>${ButtonQuickStartGuide}</span></paper-button></a>
                     </div>
 
                     <br style="clear:both;" />
