update detail page

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvnewrecording.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvnewrecording.html
@@ -74,7 +74,7 @@
                 <br />
                 <div>
                     <button type="submit" data-role="none" class="clearButton">
-                        <paper-button raised class="submit block" style="background:#cc3333;"><iron-icon icon="check"></iron-icon><span>${ButtonRecord}</span></paper-button>
+                        <paper-button raised class="submit block" style="background:#cc3333;"><iron-icon icon="videocam"></iron-icon><span>${ButtonRecord}</span></paper-button>
                     </button>
 
                     <paper-button raised class="cancel block btnCancel" onclick="history.back();"><iron-icon icon="close"></iron-icon><span>${ButtonCancel}</span></paper-button>
