--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -21,70 +21,67 @@
 
         <div id="itemBackdrop" class="itemBackdrop noBackdrop">
             <div class="itemBackdropContent">
-
-                <div class="detailPageContent primaryDetailPageContent backdropDetailPageContent">
-
-                    <div class="detailImageContainer">
-                    </div>
-
-                    <div class="detailContentEffectedByImage">
-                        <p><span class="parentName"></span><span class="itemName inlineItemName"></span><span class="itemMiscInfo" style="display: inline;"></span></p>
-                        <p style="margin:1.1em 0">
-                            <span class="itemCommunityRating"></span>
-                            <span class="userDataIcons"></span>
-                        </p>
-
-                        <div class="detailButtonsContainer desktopDetailButtons" style="text-align:left;">
-                            <span class="missingIndicator" style="margin: 0 .5em; display: none;">
-                                <span style="background: #cc3333; padding: 5px 1em; border-radius: 5px;">${LabelMissing}</span>
-                            </span>
-                            <span class="offlineIndicator" style="margin: 0 .5em; display: none;">
-                                <span style="background: #cc3333; padding: 5px 1em; border-radius: 5px;">${LabelOffline}</span>
-                            </span>
-                            <paper-button raised class="secondary btnPlay hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlay}</span></paper-button>
-                            <paper-button raised class="alt btnPlayTrailer hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button>
-                            <a class="btnPlayExternalTrailer hide clearLink" href="#" target="_blank"><paper-button raised class="alt btnPlayExternalTrailer"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button></a>
-                            <paper-button raised class="subdued btnRecord hide"><iron-icon icon="videocam"></iron-icon><span>${ButtonRecord}</span></paper-button>
-                            <paper-button raised class="subdued hide btnCancelRecording"><iron-icon icon="delete"></iron-icon><span>${ButtonCancelRecording}</span></paper-button>
-                            <paper-button raised class="submit btnSync hide"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
-                            <paper-button raised class="subdued btnShare notext hide" style="background-color:#673AB7"><iron-icon icon="share"></iron-icon></paper-button>
-                            <paper-button raised class="subdued btnMoreCommands hide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
-                        </div>
-                    </div>
-                </div>
-
             </div>
             <a href="#" id="lnkPreviousItem" class="lnkPreviousItem lnkSibling hide clearLink"><paper-button raised class="subdued notext"><iron-icon icon="arrow-back"></iron-icon></paper-button></a>
             <a href="#" id="lnkNextItem" class="lnkNextItem lnkSibling hide clearLink"><paper-button raised class="subdued notext"><iron-icon icon="arrow-forward"></iron-icon></paper-button></a>
         </div>
-        <div data-role="content">
-            <div class="detailPageContent">
 
-                <div class="detailSection" style="margin-bottom:1.5em;">
-                    <div class="detailSectionContent detailContentEffectedByImage lastDetailContentEffectedByImage">
+        <div class="detailPageContent" style="position:relative;">
 
-                        <div class="detailButtonsContainer mobileDetailButtons">
-                            <span class="missingIndicator" style="margin: 0 .5em; display: none;">
-                                <span style="background: #cc3333; padding: 5px 1em; border-radius: 5px;">${LabelMissing}</span>
-                            </span>
-                            <span class="offlineIndicator" style="margin: 0 .5em; display: none;">
-                                <span style="background: #cc3333; padding: 5px 1em; border-radius: 5px;">${LabelOffline}</span>
-                            </span>
-                            <paper-button raised class="secondary btnPlay hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlay}</span></paper-button>
-                            <paper-button raised class="alt btnPlayTrailer hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button>
-                            <a class="btnPlayExternalTrailer hide clearLink" href="#" target="_blank"><paper-button raised class="alt btnPlayExternalTrailer"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button></a>
-                            <paper-button raised class="subdued btnRecord hide"><iron-icon icon="videocam"></iron-icon><span>${ButtonRecord}</span></paper-button>
-                            <paper-button raised class="subdued hide btnCancelRecording"><iron-icon icon="delete"></iron-icon><span>${ButtonCancelRecording}</span></paper-button>
-                            <paper-button raised class="submit btnSync hide"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
-                            <paper-button raised class="subdued btnShare notext hide" style="background-color:#673AB7"><iron-icon icon="share"></iron-icon></paper-button>
-                            <paper-button raised class="subdued btnMoreCommands forceHide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
-                        </div>
-                        <p id="artist"></p>
-                        <p class="itemGenres"></p>
-                        <p class="itemOverview smoothScrollY"></p>
-                        <p id="seriesAirTime"></p>
-                        <p class="airDate"></p>
+            <paper-fab class="btnPlay detailFloatingButton hide" icon="play-arrow" title="${ButtonPlay}"></paper-fab>
+            <paper-fab class="btnFloatingRecord detailFloatingButton hide" icon="videocam" title="${ButtonRecord}"></paper-fab>
+
+            <div class="detailImageContainer">
+            </div>
+            <div class="primaryDetailsContainer">
+                <div class="detailNameContainer">
+                    <div><span class="parentName"></span><span class="itemName inlineItemName"></span></div>
+                    <div class="desktopDetails" style="margin-top:1em;">
+
+                        <span class="itemMiscInfo"></span>
+                        <span class="itemCommunityRating" style="margin-left:1em;"></span>
                     </div>
+                </div>
+                <div class="desktopDetails">
+
+                    <div class="detailButtonsContainer" style="padding-top:5px;">
+                        <paper-button raised class="subdued btnPlayTrailer hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button>
+                        <a class="btnPlayExternalTrailer hide clearLink" href="#" target="_blank"><paper-button raised class="subdued"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button></a>
+                        <paper-button raised class="subdued btnRecord hide"><iron-icon icon="videocam"></iron-icon><span>${ButtonRecord}</span></paper-button>
+                        <paper-button raised class="subdued hide btnCancelRecording"><iron-icon icon="delete"></iron-icon><span>${ButtonCancelRecording}</span></paper-button>
+                        <paper-button raised class="subdued btnSync hide"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
+                        <paper-button raised class="subdued btnShare notext hide"><iron-icon icon="share"></iron-icon></paper-button>
+                        <paper-button raised class="subdued btnMoreCommands hide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="mobileDetails" style="text-align:center;clear:both;">
+            <div style="height:10px;"></div>
+            <div>
+                <span class="itemMiscInfo"></span>
+                <span class="itemCommunityRating" style="margin-left:1em;"></span>
+            </div>
+            <div class="detailButtonsContainer">
+                <br />
+                <paper-button raised class="subdued btnPlayTrailer hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button>
+                <a class="btnPlayExternalTrailer hide clearLink" href="#" target="_blank"><paper-button raised class="subdued"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button></a>
+                <paper-button raised class="subdued btnRecord hide"><iron-icon icon="videocam"></iron-icon><span>${ButtonRecord}</span></paper-button>
+                <paper-button raised class="subdued hide btnCancelRecording"><iron-icon icon="delete"></iron-icon><span>${ButtonCancelRecording}</span></paper-button>
+                <paper-button raised class="subdued btnSync hide"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
+                <paper-button raised class="subdued btnShare notext hide"><iron-icon icon="share"></iron-icon></paper-button>
+                <paper-button raised class="subdued btnMoreCommands hide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
+            </div>
+        </div>
+        <div data-role="content" style="padding-top:0;clear:both;">
+            <div class="detailPageContent">
+                <div class="detailSection">
+                    <p id="artist"></p>
+                    <p class="itemGenres"></p>
+                    <p class="itemOverview smoothScrollY"></p>
+                    <p id="seriesAirTime"></p>
+                    <p class="airDate"></p>
                 </div>
                 <div class="collectionItems"></div>
                 <div id="childrenCollapsible" class="hide detailSection">
@@ -130,8 +127,7 @@
                     <div id="musicVideosContent" class="smallItemsContainer"></div>
                 </div>
                 <div id="similarCollapsible" style="display: none;" class="detailSection">
-                    <h1 class="similiarHeader">
-                    </h1>
+                    <h1 class="similiarHeader"></h1>
                     <div id="similarContent"></div>
                 </div>
                 <div id="criticReviewsCollapsible" style="display: none;" class="detailSection">
