--- a/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
@@ -21,7 +21,7 @@
                     ${MessageNoServersAvailableToConnect}
                 </div>
 
-                <div class="addServer" style="margin:1.5em 0;display:none;">
+                <div class="addServer" style="margin:1.5em 0;">
                     <a href="connectlogin.html?mode=manualserver" class="clearLink"><paper-button raised class="submit block"><iron-icon icon="add"></iron-icon><span>${ButtonAddServer}</span></paper-button></a>
                 </div>
 
