--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
@@ -86,7 +86,7 @@
                         <div>
                             <p>${LabelSelectFolderGroups}</p>
                             <div class="folderGroupList"></div>
-                            <div class="fieldDescription">${LabelSelectFolderGroupsHelp}</div>
+                            <div class="fieldDescription paperCheckboxFieldDescription">${LabelSelectFolderGroupsHelp}</div>
                         </div>
 
                         <br />
@@ -112,7 +112,7 @@
                         <div class="viewStylesList">
 
                         </div>
-                        <div class="fieldDescription">${LabelSelectViewStylesHelp}</div>
+                        <div class="fieldDescription paperCheckboxFieldDescription">${LabelSelectViewStylesHelp}</div>
                     </div>
                 </div>
 
