--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvnewrecording.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvnewrecording.html
@@ -8,9 +8,9 @@
 
         <div data-role="content">
             <form class="liveTvNewRecordingForm" style="margin: 0 auto;">
-                <p><span class="itemName inlineItemName"></span><span class="itemMiscInfo" style="display: inline;"></span></p>
+                <p><span class="itemName inlineItemName"></span></p>
                 <p class="itemEpisodeName"></p>
-                <p class="itemMiscInfo miscTvProgramInfo"></p>
+                <p class="itemMiscInfo"></p>
                 <p>
                     <span class="itemCommunityRating"></span>
                 </p>
