--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvtimer.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvtimer.html
@@ -13,7 +13,7 @@
                     <div style="display: none; vertical-align: top; margin-right: 1em; padding-top: 1em;" class="timerPageImageContainer">
                     </div>
                     <div style="display: inline-block; vertical-align: middle;">
-                        <p><span class="itemName inlineItemName"></span><span class="itemMiscInfo" style="display: inline;"></span></p>
+                        <p><span class="itemName inlineItemName"></span></p>
                         <p class="itemEpisodeName"></p>
                         <p class="itemMiscInfo miscTvProgramInfo"></p>
                         <p>
