update detail page

--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -54,6 +54,7 @@
                         <paper-button raised class="subdued btnSync hide"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
                         <paper-button raised class="subdued btnShare notext hide"><iron-icon icon="share"></iron-icon></paper-button>
                         <paper-button raised class="subdued btnMoreCommands hide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
+                        <span class="userDataIcons" style="display:inline-block;margin-left:1em;"></span>
                     </div>
                 </div>
             </div>
@@ -74,6 +75,7 @@
                 <paper-button raised class="subdued btnSync hide"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
                 <paper-button raised class="subdued btnShare notext hide"><iron-icon icon="share"></iron-icon></paper-button>
                 <paper-button raised class="subdued btnMoreCommands hide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
+                <div class="userDataIcons" style="margin-top:1em;"></div>
             </div>
         </div>
         <div data-role="content" style="padding-top:0;clear:both;">
