--- a/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
@@ -56,6 +56,14 @@
                             <div class="upcomingSportsItems itemsContainer"></div>
                             <br />
                         </div>
+                        <div id="upcomingKids" class="homePageSection">
+                            <div>
+                                <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderUpcomingForKids}</h1>
+                                <a href="livetvitems.html?type=kids" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more mini noIcon">${ButtonMoreItems}</paper-button></a>
+                            </div>
+                            <div class="upcomingKidsItems itemsContainer"></div>
+                            <br />
+                        </div>
                     </div>
                 </neon-animatable>
                 <neon-animatable>
