--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboardhosting.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboardhosting.html
@@ -19,47 +19,37 @@
 
                     <ul data-role="listview" class="ulForm">
                         <li>
-                            <label for="txtPortNumber">${LabelLocalHttpServerPortNumber}</label>
-                            <input type="number" id="txtPortNumber" name="txtPortNumber" pattern="[0-9]*" required="required" min="1" />
+                            <paper-input type="number" id="txtPortNumber" label="${LabelLocalHttpServerPortNumber}" pattern="[0-9]*" required="required" min="1"></paper-input>
                             <div class="fieldDescription">${LabelLocalHttpServerPortNumberHelp}</div>
                         </li>
                         <li>
-                            <label for="txtPublicPort">${LabelPublicHttpPort}</label>
-                            <input type="number" id="txtPublicPort" pattern="[0-9]*" required="required" min="1" />
+                            <paper-input type="number" label="${LabelPublicHttpPort}" id="txtPublicPort" pattern="[0-9]*" required="required" min="1"></paper-input>
                             <div class="fieldDescription">${LabelPublicHttpPortHelp}</div>
                         </li>
                         <li>
-                            <label for="txtDdns">${LabelExternalDDNS}</label>
-                            <input id="txtDdns" />
+                            <paper-input id="txtDdns" type="text" label="${LabelExternalDDNS}"></paper-input>
                             <div class="fieldDescription">${LabelExternalDDNSHelp}</div>
                         </li>
                         <li>
-                            <label for="txtHttpsPort">${LabelHttpsPort}</label>
-                            <input type="number" id="txtHttpsPort" pattern="[0-9]*" required="required" min="1" />
+                            <paper-input type="number" id="txtHttpsPort" pattern="[0-9]*" required="required" min="1" label="${LabelHttpsPort}"></paper-input>
                             <div class="fieldDescription">${LabelHttpsPortHelp}</div>
                         </li>
                         <li>
-                            <label for="txtPublicHttpsPort">${LabelPublicHttpsPort}</label>
-                            <input type="number" id="txtPublicHttpsPort" pattern="[0-9]*" required="required" min="1" />
+                            <paper-input type="number" id="txtPublicHttpsPort" pattern="[0-9]*" required="required" min="1" label="${LabelPublicHttpsPort}"></paper-input>
                             <div class="fieldDescription">${LabelPublicHttpsPortHelp}</div>
                         </li>
                         <li>
-                            <label for="txtCertificatePath">${LabelCustomCertificatePath}</label>
-                            <div style="display: inline-block; width: 85%;">
-                                <input type="text" id="txtCertificatePath" />
-                            </div>
-                            <button id="btnSelectCertPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
+                            <paper-input type="text" id="txtCertificatePath" label="${LabelCustomCertificatePath}" style="display: inline-block; width: 80%;"></paper-input>
+                            <paper-icon-button id="btnSelectCertPath" icon="search" title="${ButtonSelectDirectory}"></paper-icon-button>
                             <div class="fieldDescription">${LabelCustomCertificatePathHelp}</div>
                         </li>
                         <li>
-                            <label for="chkEnableHttps" data-mini="true">${LabelEnableHttps}</label>
-                            <input type="checkbox" id="chkEnableHttps" data-mini="true" />
-                            <div class="fieldDescription">${LabelEnableHttpsHelp}</div>
+                            <paper-checkbox id="chkEnableHttps">${LabelEnableHttps}</paper-checkbox>
+                            <div class="fieldDescription paperCheckboxFieldDescription">${LabelEnableHttpsHelp}</div>
                         </li>
                         <li>
-                            <label for="chkEnableUpnp">${LabelEnableAutomaticPortMap}</label>
-                            <input type="checkbox" id="chkEnableUpnp" data-mini="true" />
-                            <div class="fieldDescription">${LabelEnableAutomaticPortMapHelp}</div>
+                            <paper-checkbox id="chkEnableUpnp">${LabelEnableAutomaticPortMap}</paper-checkbox>
+                            <div class="fieldDescription paperCheckboxFieldDescription">${LabelEnableAutomaticPortMapHelp}</div>
                         </li>
                     </ul>
 
