--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvtunerprovider-hdhomerun.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvtunerprovider-hdhomerun.html
@@ -26,7 +26,7 @@
                             </div>
                             <div>
                                 <br />
-                                <paper-checkbox class="chkEnabled">${LabelEnableThisTuner}</paper-checkbox>
+                                <paper-checkbox class="chkEnabled" checked>${LabelEnableThisTuner}</paper-checkbox>
                                 <div class="fieldDescription paperCheckboxFieldDescription">${LabelEnableThisTunerHelp}</div>
                             </div>
                             <div>
