--- a/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
@@ -43,7 +43,7 @@
                         <div id="upcomingTvMovies" class="homePageSection">
                             <div>
                                 <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderUpcomingMovies}</h1>
-                                <a href="livetvitems.html?type=movies" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more mini noIcon">${ButtonMoreItems}</paper-button></a>
+                                <a href="livetvitems.html?type=movies" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more noIcon">${ButtonMoreItems}</paper-button></a>
                             </div>
                             <div class="upcomingTvMovieItems itemsContainer"></div>
                             <br />
@@ -51,7 +51,7 @@
                         <div id="upcomingSports" class="homePageSection">
                             <div>
                                 <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderUpcomingSports}</h1>
-                                <a href="livetvitems.html?type=sports" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more mini noIcon">${ButtonMoreItems}</paper-button></a>
+                                <a href="livetvitems.html?type=sports" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more noIcon">${ButtonMoreItems}</paper-button></a>
                             </div>
                             <div class="upcomingSportsItems itemsContainer"></div>
                             <br />
@@ -59,7 +59,7 @@
                         <div id="upcomingKids" class="homePageSection">
                             <div>
                                 <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderUpcomingForKids}</h1>
-                                <a href="livetvitems.html?type=kids" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more mini noIcon">${ButtonMoreItems}</paper-button></a>
+                                <a href="livetvitems.html?type=kids" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more noIcon">${ButtonMoreItems}</paper-button></a>
                             </div>
                             <div class="upcomingKidsItems itemsContainer"></div>
                             <br />
