add tuner setup to startup wizard

--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardsettings.html
@@ -17,8 +17,8 @@
                         <paper-checkbox class="chkEnableInternetProviders" checked>${LabelDownloadInternetMetadata}</paper-checkbox>
                         <div class="fieldDescription paperCheckboxFieldDescription">${LabelDownloadInternetMetadataHelp}</div>
                     </div>
-                    <div style="margin: 2em 0;">
-                        <paper-checkbox class="chkSaveLocalMetadata">${LabelSaveLocalMetadataHelp}</paper-checkbox>
+                    <div>
+                        <paper-checkbox class="chkSaveLocalMetadata">${LabelSaveLocalMetadata}</paper-checkbox>
                         <div class="fieldDescription paperCheckboxFieldDescription">${LabelSaveLocalMetadataHelp}</div>
                     </div>
 
