update startup wizard

--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardagreement.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardagreement.html
@@ -12,7 +12,7 @@
                 <form class="wizardAgreementForm">
 
                     <h1>
-                        <img src="css/images/mblogoicon.png" style="vertical-align:middle;height:30px;margin-right:5px;" />${HeaderTermsOfService}
+                        ${HeaderTermsOfService}
                     </h1>
 
                     <p style="margin-top:2em;">${MessagePleaseAcceptTermsOfService}</p>
