--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
@@ -10,7 +10,7 @@
 
             <div class="ui-corner-all ui-shadow wizardContent">
                 <h1>
-                    <img src="css/images/mblogoicon.png" style="vertical-align:middle;height:30px;margin-right:5px;" />${LabelYoureDone}
+                    ${LabelYoureDone}
                 </h1>
 
                 <p style="margin:2em 0;">${WizardCompleted}</p>
