--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardlibrary.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardlibrary.html
@@ -12,7 +12,7 @@
 
                 <div>
                     <h1 style="display:inline-block;">
-                        <img src="css/images/mblogoicon.png" style="height:30px;vertical-align:middle;margin-right:5px;" />${HeaderSetupLibrary}
+                        ${HeaderSetupLibrary}
                     </h1>
                     <a href="https://github.com/MediaBrowser/Wiki/wiki/Library%20setup" target="_blank" class="clearLink" style="margin-top:-10px;display:inline-block;vertical-align:middle;margin-left:2em;"><paper-button raised class="secondary mini"><iron-icon icon="info"></iron-icon><span>${ButtonHelp}</span></paper-button></a>
                 </div>
