--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
@@ -13,7 +13,7 @@
 
                     <div>
                         <h1 style="float:left;">
-                            <img src="css/images/mblogoicon.png" style="vertical-align:middle;height:30px;margin-right:5px;" />${WelcomeToProject}
+                            ${WelcomeToProject}
                         </h1>
                         <a href="https://github.com/MediaBrowser/Wiki/wiki/Quick%20start" target="_blank" class="clearLink" style="float:right;margin-top:20px;"><paper-button raised class="secondary mini"><iron-icon icon="info"></iron-icon><span>${ButtonQuickStartGuide}</span></paper-button></a>
                     </div>
