--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardservice.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardservice.html
@@ -10,7 +10,7 @@
 
             <div class="ui-corner-all ui-shadow wizardContent">
                 <h1>
-                    <img src="css/images/mblogoicon.png" style="vertical-align:middle;height:30px;margin-right:5px;" />${LabelWindowsService}
+                    ${LabelWindowsService}
                 </h1>
 
                 <p style="margin-top:2em;">${AWindowsServiceHasBeenInstalled}</p>
