--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardsettings.html
@@ -11,7 +11,7 @@
             <div class="ui-corner-all ui-shadow wizardContent">
                 <form class="wizardSettingsForm">
                     <h1>
-                        <img src="css/images/mblogoicon.png" style="vertical-align:middle;height:30px;margin-right:5px;" />${LabelConfigureSettings}
+                        ${LabelConfigureSettings}
                     </h1>
                     <div style="margin: 3em 0;">
                         <paper-checkbox class="chkEnableInternetProviders" checked>${LabelDownloadInternetMetadata}</paper-checkbox>
