--- a/MediaBrowser.WebDashboard/dashboard-ui/wizarduser.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizarduser.html
@@ -11,7 +11,7 @@
             <div class="ui-corner-all ui-shadow wizardContent">
                 <form class="wizardUserForm">
                     <h1>
-                        <img src="css/images/mblogoicon.png" style="height: 30px;vertical-align:middle;margin-right:5px;" />${TellUsAboutYourself}
+                        ${TellUsAboutYourself}
                     </h1>
 
                     <p style="margin-top:2em;">${UserProfilesIntro}</p>
