restore people fields

--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -86,9 +86,12 @@
                         <p class="itemGenres"></p>
                     </div>
                     <h2 class="tagline"></h2>
-                    <p class="itemOverview smoothScrollY"></p>
+                    <p id="itemBirthday"></p>
+                    <p id="itemBirthLocation"></p>
+                    <p id="itemDeathDate"></p>
                     <p id="seriesAirTime"></p>
                     <p class="airDate"></p>
+                    <p class="itemOverview smoothScrollY"></p>
                 </div>
                 <div class="collectionItems"></div>
                 <div id="childrenCollapsible" class="hide detailSection">
