--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -12,9 +12,9 @@
             <div style="float:right;position:relative;top:5px;right:5px;text-align:right;">
                 <div>
                     <span class="nowPlayingSelectedPlayer"></span>
+                    <paper-fab mini icon="slideshow" class="btnSlideshow" style="vertical-align:middle;background:#888;z-index:1;margin-right:.5em;"></paper-fab>
                     <paper-fab mini icon="cast" class="blue nowPlayingCastIcon" onclick="MediaController.showPlayerSelection();" style="vertical-align:middle;"></paper-fab>
                 </div>
-                <div style="margin-top:1em;"><paper-fab mini icon="slideshow" class="btnSlideshow" style="vertical-align:middle;background:#888;z-index:1;"></paper-fab></div>
             </div>
 
             <neon-animated-pages selected="{{selected}}">
