--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardlivetvtuner.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardlivetvtuner.html
@@ -35,7 +35,7 @@
                     <div class="wizardNavigation">
                         <button type="button" data-role="none" class="clearButton" style="width:auto;" onclick="history.back();"><paper-button raised class="subdued"><iron-icon icon="arrow-back"></iron-icon><span>${LabelPrevious}</span></paper-button></button>
                         <button type="submit" data-role="none" class="clearButton" style="width:auto;"><paper-button raised class="accent"><iron-icon icon="arrow-forward"></iron-icon><span>${LabelNext}</span></paper-button></button>
-                        <button type="button" data-role="none" class="clearButton btnSkip" style="width:auto;"><paper-button raised style="background:#ccc;"><iron-icon icon="arrow-forward"></iron-icon><span>${ButtonSkip}</span></paper-button></button>
+                        <button type="button" data-role="none" class="clearButton btnSkip" style="width:auto;"><paper-button raised style="background:#607D8B;color:#fff;"><iron-icon icon="arrow-forward"></iron-icon><span>${ButtonSkip}</span></paper-button></button>
                     </div>
                 </form>
             </div>
